<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/home_page">

    <fragment
        android:id="@+id/home_page"
        android:name="com.example.psusensor.drawer.home.HomePage"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home_page" >
    </fragment>

    <fragment
        android:id="@+id/instant_power_curve_page"
        android:name="com.example.psusensor.drawer.instant_power_curve.InstantPowerCurvePage"
        android:label="@string/menu_instant_power_curve"
        tools:layout="@layout/fragment_instant_power_curve_page" />

    <fragment
        android:id="@+id/monthly_electricity_bill_page"
        android:name="com.example.psusensor.drawer.monthly_electricity_bill.MonthlyElectricityBillPage"
        android:label="@string/menu_monthly_electricity_bill"
        tools:layout="@layout/fragment_monthly_electricity_bill_page" />

    <fragment
        android:id="@+id/theme_selection_page"
        android:name="com.example.psusensor.drawer.theme_selection.ThemeSelectionPage"
        android:label="@string/menu_theme_selection"
        tools:layout="@layout/fragment_theme_selection_page" />

    <fragment
        android:id="@+id/custom_gif_page"
        android:name="com.example.psusensor.drawer.custom_gif.CustomGifPage"
        android:label="@string/menu_custom_gif"
        tools:layout="@layout/fragment_custom_gif_page" />

    <fragment
        android:id="@+id/reset_wifi_connection_page"
        android:name="com.example.psusensor.drawer.ResetWiFiConnectionPage"
        android:label="@string/menu_reset_wifi_connection"
        tools:layout="@layout/fragment_reset_wifi_connection_page" />

    <fragment
        android:id="@+id/troubleshooting_page"
        android:name="com.example.psusensor.drawer.TroubleshootingPage"
        android:label="@string/menu_troubleshooting"
        tools:layout="@layout/fragment_troubleshooting_page" />

    <fragment
        android:id="@+id/languages_page"
        android:name="com.example.psusensor.drawer.LanguagesPage"
        android:label="@string/menu_languages"
        tools:layout="@layout/fragment_languages_page" />

</navigation>