<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".set_wifi.view_pager.EnableBluetoothPage">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/turn_on_bluetooth"
        android:adjustViewBounds="true"
        android:contentDescription="@string/turn_on_bluetooth_description"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_turn_on_bluetooth"
        android:textColor="@color/text_color"
        android:textSize="@dimen/category_name"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/enable_bluetooth_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn_on_bluetooth"
        android:layout_marginTop="20dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>