<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".set_wifi.view_pager.SettingFinishedPage">

    <View
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/ic_partying_face"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifi_setting_finished"
        android:textColor="@color/text_color"
        android:textSize="@dimen/category_name"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifi_setting_finished_sub"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/back_home_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_home"
        android:layout_marginTop="20dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>