<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".drawer.instant_power_curve.InstantPowerCurvePage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:padding="5dp">

        <TextView
            android:id="@+id/last_30s_power_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_30s_power"
            android:textSize="@dimen/category_name"
            android:textColor="@color/text_color"
            android:gravity="center"
            android:maxLines="1"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/set_power_limit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_power_limit"
            app:layout_constraintTop_toBottomOf="@id/last_30s_power_tv"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/current_power_limit_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/current_power_limit_default"
            android:textSize="18sp"
            android:textColor="@color/text_color"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="@id/set_power_limit_btn"
            app:layout_constraintBottom_toBottomOf="@id/set_power_limit_btn"
            app:layout_constraintStart_toEndOf="@id/set_power_limit_btn"
            app:layout_constraintEnd_toEndOf="parent"/>

        <WebView
            android:id="@+id/instant_power_curve_web"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/set_power_limit_btn"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:padding="5dp">

        <TextView
            android:id="@+id/daily_power_usage_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daily_power_usage"
            android:textSize="@dimen/category_name"
            android:textColor="@color/text_color"
            android:gravity="center"
            android:maxLines="1"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/select_date_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            app:layout_constraintTop_toBottomOf="@id/daily_power_usage_tv"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/date_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/date_default"
            android:textSize="18sp"
            android:textColor="@color/text_color"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="@id/select_date_btn"
            app:layout_constraintBottom_toBottomOf="@id/select_date_btn"
            app:layout_constraintStart_toEndOf="@id/select_date_btn"
            app:layout_constraintEnd_toEndOf="parent"/>

        <WebView
            android:id="@+id/daily_power_usage_web"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/select_date_btn"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.appcompat.widget.LinearLayoutCompat>