<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".drawer.monthly_electricity_bill.MonthlyElectricityBillPage"
    android:padding="10dp">

    <TextView
        android:id="@+id/select_year_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_year"
        android:textColor="@color/text_color"
        android:textSize="@dimen/category_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/select_year_tv"
        app:layout_constraintEnd_toEndOf="parent"/>

    <WebView
        android:id="@+id/monthly_electricity_bill_web"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/spinner"
        app:layout_constraintBottom_toTopOf="@id/electricity_bill_container"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/electricity_bill_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/odd_electricity_bill_color"
                android:layout_width="30dp"
                android:layout_height="0dp"
                android:background="@color/blue"
                app:layout_constraintTop_toTopOf="@id/odd_electricity_bill_tv"
                app:layout_constraintBottom_toBottomOf="@id/odd_electricity_bill_tv"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/odd_electricity_bill_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/odd_month_electricity_bill"
                android:textColor="@color/text_color"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toEndOf="@id/odd_electricity_bill_color"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/even_month_electricity_bill_color"
                android:layout_width="30dp"
                android:layout_height="0dp"
                android:background="@color/green"
                app:layout_constraintTop_toTopOf="@id/even_month_electricity_bill_tv"
                app:layout_constraintBottom_toBottomOf="@id/even_month_electricity_bill_tv"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/even_month_electricity_bill_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/even_month_electricity_bill"
                android:textColor="@color/text_color"
                android:layout_marginStart="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/even_month_electricity_bill_color"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>